--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "soundboard",
-  "main": "server.js",
+  "main": "main.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "electron:start": "electron ."
   },
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "electron": "^38.0.0"
   }
 }
